# openapi.json
@@ -13,12 +13,22 @@
       "get": {
         "operationId": "UsersController_findAll",
         "parameters": [],
-        "responses": { "200": { "description": "" } },
+        "responses": {
+          "200": {
+            "description": "No Users found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": { "$ref": "#/components/schemas/UserDto" }
+                }
+              }
+            }
+          }
+        },
         "tags": ["Users"]
-      }
-    },
-    "/users/{id}": {
-      "get": {
+      },
+      "post": {
         "operationId": "UsersController_create",
         "parameters": [],
         "requestBody": {
@@ -29,6 +39,21 @@
             }
           }
         },
+        "responses": { "201": { "description": "" } },
+        "tags": ["Users"]
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "operationId": "UsersController_findOne",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": { "type": "number" }
+          }
+        ],
         "responses": {
           "200": {
             "description": "User not found.",
@@ -87,7 +112,6 @@
   "servers": [],
   "components": {
     "schemas": {
-      "User": { "type": "object", "properties": {} },
       "UserDto": {
         "type": "object",
         "properties": {
@@ -107,7 +131,8 @@
           }
         },
         "required": ["name", "email"]
-      }
+      },
+      "User": { "type": "object", "properties": {} }
     }
   }
 }
