# src/users/users.controller.ts
@@ -14,6 +14,7 @@ import {
   ApiOkResponse,
   ApiOperation,
   ApiParam,
+  ApiResponse,
 } from '@nestjs/swagger';
 import { UserDto } from './user.dto';
 
@@ -23,12 +24,21 @@ export class UsersController {
 
   //get all users
   @Get()
+  @ApiOkResponse({
+    description: 'No Users found.',
+    type: UserDto,
+    isArray: true,
+  })
   async findAll(): Promise<User[]> {
     return await this.usersService.findall();
   }
 
   //get one user
   @Get(':id')
+  @ApiOkResponse({
+    description: 'User not found.',
+    type: UserDto,
+  })
   async findOne(@Param('id') id: number): Promise<User> {
     const user = await this.usersService.findOne(id);
     if (!user) {
@@ -37,11 +47,11 @@ export class UsersController {
       return user;
     }
   }
-  @Get(':id')
-  @ApiOkResponse({
-    description: 'User not found.',
-    type: UserDto,
-  })
+  // @Get(':id')
+  // @ApiOkResponse({
+  //   description: 'User not found.',
+  //   type: UserDto,
+  // })
 
   //create user
   @Post()
